Creado API soluciones, arreglados errores de SolutionController
